Ajout des loaders sur les pages

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "electron-app",
+  "name": "groch-app",
   "version": "2.2.0",
   "main": "dist-electron/main/index.js",
   "description": "Electron Vite React boilerplate.",
@@ -14,6 +14,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build && electron-builder",
+    "build:win": "tsc && vite build && electron-builder --windows",
     "preview": "vite preview",
     "pree2e": "vite build --mode=test",
     "e2e": "playwright test"
@@ -22,32 +23,33 @@
     "electron-updater": "^5.3.0"
   },
   "devDependencies": {
+    "@headlessui/react": "^1.7.13",
+    "@heroicons/react": "1.0.6",
     "@playwright/test": "^1.32.0",
+    "@tremor/react": "^2.0.2",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^3.1.0",
-    "electron": "^23.2.0",
-    "electron-builder": "^23.6.0",
-    "@headlessui/react": "^1.7.13",
-    "@heroicons/react": "1.0.6",
-    "@tremor/react": "^2.0.2",
     "autoprefixer": "^10.4.14",
     "classnames": "^2.3.2",
     "date-fns": "^2.29.3",
+    "electron": "^23.2.0",
+    "electron-builder": "^23.6.0",
+    "electron-icon-builder": "^2.0.1",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
     "jwt-decode": "^3.1.2",
+    "postcss": "^8.4.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.9.0",
-    "usehooks-ts": "^2.9.1",
     "sass": "^1.60.0",
-    "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7",
     "typescript": "^5.0.2",
+    "usehooks-ts": "^2.9.1",
     "vite": "^4.1.4",
     "vite-plugin-electron": "^0.11.1",
     "vite-plugin-electron-renderer": "^0.13.14"
